<resources>
    <string name="app_name">СчетКалорий</string>
    <string name="main_activity_name">Дневник</string>

    <string name="activity_profile">Профиль</string>
    <string name="activity_graphics">Графики</string>
    <string name="activity_totalPFC">Всего БЖУ</string>
    <string name="activity_insert">Вставка</string>
    <string name="activity_notification">Напоминание</string>
    <string name="activity_settings">Настройки</string>
    <string name="action_exit">Выход</string>

    <string name="activity_food">Поиск продукта</string>
    <string name="activity_sport">Поиск нагрузки</string>



    <string name="main_activity_">Дата</string>

    <string name="main_activity_table_column_norm_name">Норма</string>
    <string name="main_activity_table_column_received_name">Получено</string>
    <string name="main_activity_table_column_spent_name">Потрачено</string>
    <string name="main_activity_table_column_shortage_name">Дефицит</string>
    <string name="main_activity_table_column_excess_name">Избыток</string>

    <string name="main_activity_table_column_norm_value">Норма</string>
    <string name="main_activity_table_column_received_value">Получено</string>
    <string name="main_activity_table_column_spent_value">Потрачено</string>
    <string name="main_activity_table_column_shortage_value">Дефицит</string>
    <string name="main_activity_table_column_excess_value">Избыток</string>



    <string name="profile_sex_name">Пол</string>

    <string name="profile_birthday_name">День рождения</string>
    <string name="profile_birthday_value_default">25.05.1998</string>

    <string name="profile_height_name">Рост, см</string>
    <string name="profile_height_value_default">187</string>

    <string name="profile_weight_name">Вес, кг</string>
    <string name="profile_weight_value_default">85.0</string>

    <string name="profile_activity_name">Ваша активность</string>
    <string name="profile_activity_value_1">Минимальная</string>
    <string name="profile_activity_value_2">Слабая</string>
    <string name="profile_activity_value_3">Средняя</string>
    <string name="profile_activity_value_4">Высокая</string>
    <string name="profile_activity_value_5">Экстра</string>

    <string name="profile_day_norm_name">Суточная норма, ккал</string>
    <string name="profile_day_norm_value">Суточная норма, ккал</string>

    <string name="profile_text_1">Норма расчитана для минимальной активности по формуле Миффлина - Сан Жеора.</string>
    <string name="profile_text_2">Норма расчитана для слабой активности по формуле Миффлина - Сан Жеора.</string>
    <string name="profile_text_3">Норма расчитана для средней активности по формуле Миффлина - Сан Жеора.</string>
    <string name="profile_text_4">Норма расчитана для высокой активности по формуле Миффлина - Сан Жеора.</string>
    <string name="profile_text_5">Норма расчитана для экстра активности по формуле Миффлина - Сан Жеора.</string>

    <string name="profile_proteins">Белки</string>
    <string name="profile_fats">Жиры</string>
    <string name="profile_carbohydrates">Углеводы</string>
    <string name="profile_compounds_text">При использовании нагрузки в Дневнике норма БЖУ будет пересчитываться пропорционально</string>
    <string name="profile_figure">Фигура</string>
    <string name="profile_figure_volumes">Объёмы</string>
    <string name="profile_figure_neck">Шея</string>
    <string name="profile_figure_biceps">Бицепс</string>
    <string name="profile_figure_forearm">Предплечье</string>
    <string name="profile_figure_shoulders">Плечи</string>
    <string name="profile_figure_chest">Грудь</string>
    <string name="profile_figure_waist">Талия</string>
    <string name="profile_figure_thighs">Бёдра</string>
    <string name="profile_figure_hip">Бедро</string>
    <string name="profile_figure_shin">Голень</string>
    <string name="profile_figure_cm">, см</string>


    <string name="positive_button">Сохранить</string>
    <string name="negative_button">Отмена</string>

    <string name="height_a">1</string>
    <string name="height_b">8</string>
    <string name="height_c">5</string>
    <integer name="height">185</integer>

    <string name="weight_a">1</string>
    <string name="weight_b">8</string>
    <string name="weight_c">5</string>
    <integer name="weight">185</integer>

    <string name="profile_minimal_activity">Минимальная активность</string>
    <string name="profile_minimal_activity_more">Не занимаетесь спортом</string>
    <string name="profile_weak_activity">Слабая активность</string>
    <string name="profile_weak_activity_more">Занимаетесь спортом 1 раз в неделю</string>
    <string name="profile_average_activity">Средняя активность</string>
    <string name="profile_average_activity_more">Занимаетесь спортом 1—3 раза в неделю</string>
    <string name="profile_high_activity">Высокая активность</string>
    <string name="profile_high_activity_more">Занимаетесь спортом 3—5 раз в неделю</string>
    <string name="profile_extra_activity">Экстра активность</string>
    <string name="profile_extra_activity_more">Занимаетесь спортом каждый день</string>

    <string name="settings_language">Язык:</string>
    <string name="settings_language_selected">RU</string>
    <string name="settings_meals">Приемы пищи</string>
    <string name="settings_meals_breakfast">Завтра</string>
    <string name="settings_meals_snack">Перекус</string>
    <string name="settings_meals_lunch">Обед</string>
    <string name="settings_meals_afternoon_tea">Полдник</string>
    <string name="settings_meals_dinner">Ужин</string>
    <string name="settings_interface_color">Цвет интерфейса</string>

    <string name="meal">ЕДА</string>
    <string name="water">ВОДА</string>
    <string name="activity">УПР</string>

    <string name="new_product">Продукт</string>
    <string name="new_dish">Блюдо</string>
</resources>
