<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp">
        <TableRow
            android:id="@+id/settings_language"
            android:background="@drawable/item_selector"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="onRowClick">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_language" />

            <TextView
                android:id="@+id/settings_language_selected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:textStyle="bold"
                android:text="@string/settings_language_selected"/>

        </TableRow>

        <TableRow
            android:id="@+id/settings_meals"
            android:background="@drawable/profile_border_calorie_norm_name"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="onRowClick"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:text="@string/settings_meals" />
        </TableRow>
    </TableLayout>
</ScrollView>